sync hubspot email object
